--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'ressortirmobile' do
+target 'Ressortir' do
   use_unimodules!
   config = use_native_modules!
 
@@ -18,4 +18,6 @@ target 'ressortirmobile' do
   #     flipper_post_install(installer)
   #   end
   # end
+  pod 'react-native-paystack', :path => '../node_modules/react-native-paystack'
+
 end
